<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.add.addStory.AddStoryActivity">

    <ImageView
        android:id="@+id/image_add_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_border_dashed"
        app:layout_constraintBottom_toTopOf="@+id/camera_add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="100dp"
        android:alpha="0"
        tools:alpha="1"
        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

    <Button
        android:id="@+id/camera_add_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_baseline_camera_24"
        android:padding="5dp"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toTopOf="@+id/desc_add_til"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/gallery_add_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawableEnd="@drawable/ic_baseline_photo_album_24"
        android:padding="5dp"
        android:text="@string/gallery"
        android:textColor="@color/white"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toTopOf="@+id/desc_add_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_add_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toTopOf="@+id/post_add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc_add_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="6"
            android:scrollbars="vertical" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/post_add_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_post_add_24"
        android:text="@string/post"
        android:textColor="@color/white"
        android:foregroundGravity="center"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>